NativeHTTP By Lukasz Magiera
For more info visit http://nativehttp.org

DEV:
-Sessions accessible by UID(so that they are usable with WebSockets)
-In cookie set function there is "path=/" set by default
-Small memory leak fixed
-[Debug build] Options for logging requests/responses
-Superstring - lock and unlock stackable

0506.13:
-maxClients function
-WebSockets (RFC6455)! - Full message reciving, sending(Text/Binary, streaming/normal sending), upload chunking
	automatic ping response, closure process still have to be improved
-Configuration sorted
-Small bugfixes around disconecting clients
-is_ssl function

0106.13:
-Thread cleanup
-SuperString - set_file now sets position to 0
-NHP Parser - Configurble nativehttp.h directory
-Version checking of installed nativehttp.h

3105.13:
-Performance options
-Added 2 comment styles in Ccfg2
-Configuration file clean-up 
-SuperString - Position functions for SuperString type
-SuperString - New functions:
  -go[begin/end/pos]
  -get[begin/end]
-SuperString - Some functions are now 'stackable'  
-Bug fix in HTTP module


3005.13:
-SuperString - New functions:
  -skip
  -tochar
  -contain[not/only]
  -atend/atbegin 
-SueprString - 'ss' Alias of SuperString class(you can now use nd::ss instead nh::data::superstring)
-Bunch of bugs fixed
-New Ccfg2 
-Ccfg2 bug - no way to put '"' beetween '"' and '"'
-nativehttp::data aliased to 'nd'
-nativehttp::base aliased to 'nb'
-nativehttp::server aliased to 'ns'
-Clean-up of configuration file

1805.13:
-Async file sender
-NativeStat improvements
-Executor clean-up
-64bit integer conversions in SuperString

1105.13:
-Special macros for returning OnLoad status
-Scales on diagrams in NativeStat
-Added few SuperString functions - RE-NAMED SOME OLD!
-Longer data type for statistics
-Fixed connections stats
-Fixed SuperString Destructor

1005.13:
-Custom thread names
-Manager now catch some more signals
-Superstring clean up and few new features
-Fixed manager crash loop