@@ -169,7 +169,7 @@ session_life = 300
 
 [WebSockets]
 /* "1" Enables WebSockets */
-ws_enable = 1
+ws_enable = 0
 
 /* maximal number of registred WebSocket URIs */
 ws_nuri_max = 256
